--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body class="bg-green-950">
+    <div id="model"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
