--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Vite + React</title>
   </head>
   <body class="bg-green-950">
-    <div id="model" class="h-full w-full backdrop-blur-md"></div>
+    <div class="h-full w-full backdrop-blur-md">
+      <div id="model"></div>
+    </div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
